services-ingress/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-example
spec:
  type: ClusterIP
  selector:
    app: svc-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-deployment
spec:
  selector:
    matchLabels:
      app: svc-example
  replicas: 3
  template:
    metadata:
      labels:
        app: svc-example
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: port-1
          containerPort: 80
